src/objects/DCIS__c.object
<CustomObject>
    <fields>
        <fullName>Anterior_Inferior_Size__c</fullName>
        <label>Anterior/Inferior Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anterior_Inferior__c</fullName>
        <label>Anterior/Inferior</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Anterior_Superior_Size__c</fullName>
        <label>Anterior/Superior Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anterior_Superior__c</fullName>
        <label>Anterior/Superior</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apocrine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apocrine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calcifications_Present__c</fullName>
        <label>Calcifications Present</label>
        <picklist>
            <controllingField>Calcifications__c</controllingField>
            <picklistValues>
                <fullName>Benign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCIS &amp; Benign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCIS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calcifications__c</fullName>
        <label>Calcifications</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clinging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clinging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closest_Margin__c</fullName>
        <label>Closest Margin</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;1mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;1cm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comedonecrosis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comedonecrosis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cribiform__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cribiform</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cruciform__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cruciform</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCIS__c</fullName>
        <label>DCIS %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deep_Margin_Size__c</fullName>
        <label>Deep Margin Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deep_Margin__c</fullName>
        <label>Deep Margin</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Slide__c</fullName>
        <label>From Slide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Histology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Histology</label>
        <referenceTo>Histology__c</referenceTo>
        <relationshipLabel>DCIS</relationshipLabel>
        <relationshipName>DCIS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intra_cystic_encysted_papillary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intra-cystic (encysted papillary)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lateral_Size__c</fullName>
        <label>Lateral Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lateral__c</fullName>
        <label>Lateral</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Size__c</fullName>
        <label>Medical Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <label>Medical</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Micropapillary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Micropapillary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Microscopic_foci_upto__c</fullName>
        <label>Microscopic foci upto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Necrosis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Necrosis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nuclear_Grade__c</fullName>
        <label>Nuclear Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Grade I (low)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Grade II (intermediate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade III (high)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indeterminate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_Study_Pathology_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On-Study Pathology Form</label>
        <referenceTo>On_Study_Pathology_Form__c</referenceTo>
        <relationshipLabel>DCIS</relationshipLabel>
        <relationshipName>DCIS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_if_other_mention_type_in_textb__c</fullName>
        <inlineHelpText>Other (if other, mention type in textbox given)</inlineHelpText>
        <label>Other(if other, mention type in textbox)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Papillary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Papillary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Surgery_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Surgery Summary</label>
        <referenceTo>Post_Surgaory_Summary__c</referenceTo>
        <relationshipLabel>DCIS</relationshipLabel>
        <relationshipName>DCIS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Present_as_scattered_microscopic_foci__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Present as scattered microscopic foci</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Present_in_continous_section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Present in continous section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Punctate_necrosis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Punctate necrosis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spanning__c</fullName>
        <label>Spanning</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specific_Closest_Margin_Measurement_Unit__c</fullName>
        <label>Specific Closest Margin Measurement Unit</label>
        <picklist>
            <controllingField>Closest_Margin__c</controllingField>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specific_Closest_Margin__c</fullName>
        <label>Specific Closest Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Slide__c</fullName>
        <label>To Slide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Histological_Span_Measurement_Unit__c</fullName>
        <label>Total Histological Span Measurement Unit</label>
        <picklist>
            <picklistValues>
                <fullName>CM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Histological_Span__c</fullName>
        <label>Total Histological Span</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tumor_Size__c</fullName>
        <label>Tumor Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unknown_Not_Reported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unknown/Not Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pg_dcis_Id__c</fullName>
        <label>pg_dcis_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>DCIS</label>
    <nameField>
        <displayFormat>DCIS-{000000}</displayFormat>
        <label>DCIS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCIS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>